# TestNucleus

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example_suite.yaml
data/: seed.py
src/testnucleus/: cli.py
src/testnucleus/connectors/: __init__.py  sql.py
src/testnucleus/engine/: __init__.py  runner.py
src/testnucleus/models/: __init__.py  config.py  results.py
src/testnucleus/reporting/: __init__.py  console.py  exporters.py
src/testnucleus/validators/: __init__.py  _base.py  completeness.py  conformity.py  consistency.py  uniqueness.py  validity.py
tests/: conftest.py  test_validators.py
