[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testnucleus"
version = "0.1.0"
description = "Metadata-driven data quality validation framework for data engineering"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kaustav Purkayastha", email = "kaustavpurk2@gmail.com"}]
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql    = ["pymysql>=1.1"]
dev      = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
testnucleus = "testnucleus.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
